[package]
name = "crawl"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
